Claude and Qwen buttons and its JS added in idea.js

--- a/idea.html
+++ b/idea.html
@@ -10,6 +10,8 @@
 
     <!-- Crear un botón que ponga chatGPT -->
      <button id="chatgpt-btn">chatGPT</button>
+     <button id="qwen-btn">Qwen</button>
+     <button id="claude-btn">Claude</button>
 
     <script src="js/idea.js"></script>
     
