contador de clicks activado

--- a/idea.html
+++ b/idea.html
@@ -8,10 +8,15 @@
 </head>
 <body>
 
+    <button id="todo">TODOS A LA VEZ</button>
+    
+    <header>
     <!-- Crear un botón que ponga chatGPT -->
      <button id="chatgpt-btn">chatGPT</button>
      <button id="qwen-btn">Qwen</button>
      <button id="claude-btn">Claude</button>
+
+    </header>
 
     <script src="js/idea.js"></script>
     
