--- a/idea.html
+++ b/idea.html
@@ -11,10 +11,10 @@
     <button id="todo">TODOS A LA VEZ</button>
     
     <header>
-    <!-- Crear un botón que ponga chatGPT -->
      <button id="chatgpt-btn">chatGPT</button>
      <button id="qwen-btn">Qwen</button>
      <button id="claude-btn">Claude</button>
+     <!-- <button id="todoBlob">Descargar Estadísticas de Clics</button> -->
 
     </header>
 
